css/admin_general.css
.add_class_message{
    color: red;
}

.border-divider{
    border-top: 1px solid #dfdfdf;
    margin: 25px 10px 25px 0px;
    padding-top: 20px;
}

.right{
    float: right;
}

.tablenav .actions.new-actions{
    padding: 2px 0px 0px 0px;
}

.tablenav .actions{
    overflow: visible;
}

.tablenav .actions .chosen-container{
    float: left;
    min-width: 300px;
    margin-right: 5px;
}

.zero{
    padding: 0px 10px 14px;
}

.zero-courses{
    padding: 10px 10px 14px;
}

.email-settings input[type="text"]{
    width: 100%;
}

.email-settings .description{
    padding:8px 0px 0px 7px;
}

.js .tmce-active .wp-editor-area{
    color:#000 !important;
}

.invite_student_area{
    border-top: 1px solid #ddd;
    margin-top: 30px;
    padding-top: 20px;
}

.students_bulk_email_area{
    border-top: 1px solid #ddd;
    margin-top: 30px;
    padding-top: 20px;
}

.students_bulk_email_area label.email_subject{
    margin-bottom:20px;
    width: 100%;
    display: block;
}

.students_bulk_email_area input[type="text"], .students_bulk_email_area textarea {
    width: 100%;
    margin-top: 8px;
}

.students_bulk_email_area .email_subject{
    margin-bottom:10px;
}

.additional_class_actions_add_student{
    padding: 10px 1% 10px 1%;
    text-align: left;
    border-top:1px solid #ddd;
    float: left;
    width: 48%
}

.additional_class_actions{
    padding: 15px 1% 10px 1%;
    text-align: right;
    border-top:1px solid #ddd;
    float: right;
    width: 48%
}

.additional_class_actions a{
    color:#21759b;
}

.additional_class_actions a:hover{
    color:#d54e21;
}

.view-course-link{
    text-align:right; 
    float: right;
    margin: -2px 7px 1px 0px;
    background: #fff;
}
.wp-core-ui a.button-delete{
    background: none repeat scroll 0 0 #db2020;
    text-shadow: none;
    color: #fff;
    width: 100px;
    text-align: center;
    margin: 2px 0px 3px 0px;
}

.wp-core-ui a.button-delete:hover{
    background: none repeat scroll 0 0 #db2020;
    text-shadow: none;
    color: #fff;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha( Opacity=70 )";
    filter: alpha( opacity=70 );
    -moz-opacity: 0.7;
    -khtml-opacity: 0.7;
    opacity: 0.7;
}



.wp-core-ui a.button-settings{
    background: none repeat scroll 0 0 #05C8F2;
    text-shadow: none;
    color: #fff;
    text-align: center;
    margin: 2px 0px 3px 0px;

    -webkit-border-radius: 0px; 
    -moz-border-radius: 0px; 
    border-radius: 0px; 
    border-width: 0px;
}

.wp-core-ui a.button.button-settings:hover{
    background: none repeat scroll 0 0 #05C8F2;
    text-shadow: none;
    color: #fff;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha( Opacity=70 )";
    filter: alpha( opacity=70 );
    -moz-opacity: 0.7;
    -khtml-opacity: 0.7;
    opacity: 0.7;
}


.wp-core-ui a.button-units{
    background: none repeat scroll 0 0 #0088A5;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 2px 0px 3px 0px;

    -webkit-border-radius: 0px; 
    -moz-border-radius: 0px; 
    border-radius: 0px; 
    border-width: 0px;
    box-shadow: none;
}

.wp-core-ui input[type="submit"].button-units{
    background: none repeat scroll 0 0 #00B0D6;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 3px 0px 3px 0px;

    -webkit-border-radius: 0px; 
    -moz-border-radius: 0px; 
    border-radius: 0px; 
    border-width: 0px;
    box-shadow: none;
    height: 27px;
}

.wp-core-ui a.button-units:hover,
.wp-core-ui input[type="submit"].button-units:hover{
    background: none repeat scroll 0 0 #00B0D6;
    text-shadow: none;
    color: #fff;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha( Opacity=70 )";
    filter: alpha( opacity=70 );
    -moz-opacity: 0.7;
    -khtml-opacity: 0.7;
    opacity: 0.7;
}

.wp-core-ui input[type="submit"].button-publish{
    background: none repeat scroll 0 0 #1ecd8e;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 3px 0px 3px 0px;

    -webkit-border-radius: 0px; 
    -moz-border-radius: 0px; 
    border-radius: 0px; 
    border-width: 0px;
    box-shadow: none;
    height: 27px;
}


.wp-core-ui input[type="submit"].button-publish:hover{
    background: none repeat scroll 0 0 #3ed69f;
    text-shadow: none;
    color: #fff;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha( Opacity=70 )";
    filter: alpha( opacity=70 );
    -moz-opacity: 0.7;
    -khtml-opacity: 0.7;
    opacity: 0.7;
}

.wp-core-ui input[type="submit"].button-unpublish{
    background: none repeat scroll 0 0 #e65c52;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 3px 0px 3px 0px;

    -webkit-border-radius: 0px; 
    -moz-border-radius: 0px; 
    border-radius: 0px; 
    border-width: 0px;
    box-shadow: none;
    height: 27px;
}

.wp-core-ui input[type="submit"].button-unpublish:hover{
    background: none repeat scroll 0 0 #e65c52;
    text-shadow: none;
    color: #fff;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha( Opacity=70 )";
    filter: alpha( opacity=70 );
    -moz-opacity: 0.7;
    -khtml-opacity: 0.7;
    opacity: 0.7;
}

.wp-core-ui a.button-publish{
    background: none repeat scroll 0 0 #1ecd8e;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 2px 0px 3px 0px;

    -webkit-border-radius: 0px; 
    -moz-border-radius: 0px; 
    border-radius: 0px; 
    border-width: 0px;
}

.wp-core-ui a.button-publish:hover{
    background: none repeat scroll 0 0 #3ed69f;
    text-shadow: none;
    color: #fff;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha( Opacity=70 )";
    filter: alpha( opacity=70 );
    -moz-opacity: 0.7;
    -khtml-opacity: 0.7;
    opacity: 0.7;
}

.wp-core-ui a.button-unpublish{
    background: none repeat scroll 0 0 #FF881F;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 2px 0px 3px 0px;

    -webkit-border-radius: 0px; 
    -moz-border-radius: 0px; 
    border-radius: 0px; 
    border-width: 0px;
}

.wp-core-ui a.button-unpublish:hover{
    background: none repeat scroll 0 0 #FF881F;
    text-shadow: none;
    color: #fff;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha( Opacity=70 )";
    filter: alpha( opacity=70 );
    -moz-opacity: 0.7;
    -khtml-opacity: 0.7;
    opacity: 0.7;
}

#wp-unit_description-wrap{
    width: 99%;
}

.radio_new_link, .radio_remove, .checkbox_new_link, .checkbox_remove{
    cursor: pointer;
}

.unit-control-buttons{
    margin: 10px 0px 10px 0px;
}

.course-control-buttons{
    margin: 10px 0px 10px 10px;
    display: inline-block;
}

.course-add-units-button{
    display: inline-block;
    float: right;
}

.unit-control-buttons a.button.button-settings{
    background: none repeat scroll 0 0 #05C8F2;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 2px 0px 3px 0px;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    border-width: 0px;
}

.unit-control-buttons a.button.button-settings:hover{
    background: #05C8F2;
    color: #fff;
}

.unit-control-buttons .button.button-preview{
    background: none repeat scroll 0 0 #ec8c35;
    text-shadow: none;
    color: #fff;
    width: 100%;
    text-align: center;
    margin: 3px 0px 3px 0px;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    border-width: 0px;
}

.unit-control-buttons .button.button-preview:hover{
    background: #e99a53;
    color: #fff;
}

.unit-control-buttons a.button.button-unpublish{
    background: #e65c52;
    color: #fff;
}

.unit-control-buttons a.button.button-publish{
    background: #1ecd8e;
    color: #fff;
}

.unit-control-buttons a.button.button-publish:hover{
    background:#3ed69f;
    color: #fff;
}

.unit-control-buttons a.button.button-units,
.unit-control-buttons input[type="submit"].button.button-units,
.unit-control-buttons a.button.button-publish,
.unit-control-buttons a.button.button-unpublish,
.unit-control-buttons .button.button-preview,
.unit-control-buttons a.button.button-settings{
    display: inline-block;
    width: 120px;
    color: #fff;
}

span.error {
	color: #ff0000;
}

span.required:after,
label.required:after{
	content: '*';
	color: #ff0000;
}

.unit-control-buttons a.button.button-unpublish,
.unit-control-buttons a.button.button-publish,
.unit-control-buttons .button.button-preview{
    /*margin-left: 5px;*/
}

td.label {
    padding-left: 20px;
}

.checkbox-editor .checkbox_new_link,
.radio-editor .radio_new_link{
    margin-left: 65px;
    margin-bottom: 15px;
}

#settings-wrap .mp-tabs .mp-tab:last-child a {
    color: #00bbff;
    border-top: 1px solid #dadada;
    padding-top: 16px;
    margin-right: 18px;
    margin-left: 15px;
    padding-left: 0px;
}

.group-check{
    margin-bottom: 20px;
    margin-top: 20px;
}

.group-check label{
    display: inline;
    margin-left: 30px;
}

.group-check label:first-child{
    margin-left: 0px;
}

/* Hide from larger displays. */
.visible-small,
.visible-extra-small {
    display:none;
}

.delete_unit_page{
    float: right;
    margin-right: 26px;
    margin-top: -5px;
}

a.button.button-units.button-delete-unit{
    background-color: #0092cb;
    font-weight: normal;
}

a.button.button-units.button-delete-unit:hover{
    background: #E65C52;
    color: #fff;
    opacity: 1;
}

.invalid_extension_field{
    border: 1px red solid !important;
}

.invalid_extension_message{
    color: red;
    display: none;
}

